cluster/git-pkgs/deployment-git-pkgs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: git-pkgs-deployment
  namespace: git-pkgs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: git-pkgs
  template:
    metadata:
      labels:
        app: git-pkgs
    spec:
      nodeSelector:
        role: apps
      containers:
        - env:
            - name: PROXY_BASE_URL
              value: "https://pkgs.nathanv.app"
            - name: PROXY_DATABASE_DRIVER
              value: postgres
            - name: PROXY_CACHE_METADATA
              value: "true"
            - name: PROXY_METADATA_TTL
              value: 5m
            - name: PROXY_STORAGE_MAX_SIZE
              value: 10GB
          image: cr.nathanv.app/ghcr.io/git-pkgs/proxy:v0.9.0
          args:
            - -config
            - /etc/proxy/config.yaml
          name: git-pkgs
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /etc/proxy
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: git-pkgs-configmap
            items:
              - key: config.yaml
                path: config.yaml
