cluster/git-pkgs/deployment-postgresql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: git-pkgs-postgresql-deployment
  namespace: git-pkgs
spec:
  replicas: 1
  serviceName: git-pkgs-postgresql
  selector:
    matchLabels:
      app: git-pkgs-postgresql
  template:
    metadata:
      labels:
        app: git-pkgs-postgresql
    spec:
      nodeSelector:
        role: apps
      containers:
        - envFrom:
            - secretRef:
                name: git-pkgs-db-env
          # registry-proxy image-prefix
          image: cr.nathanv.app/docker.io/library/postgres:18.6
          name: postgresql
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/
              name: postgresql-vol
      volumes:
        - name: postgresql-vol
          persistentVolumeClaim:
            claimName: git-pkgs-pvc-postgresql
