cluster/git-pkgs/service-git-pkgs.yaml
apiVersion: v1
kind: Service
metadata:
  name: git-pkgs-service
  namespace: git-pkgs
spec:
  type: ClusterIP
  selector:
    app: git-pkgs
  ports:
    - port: 8080
      protocol: TCP
