cluster/git-pkgs/ingress-ui.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: git-pkgs-route-ui
  namespace: git-pkgs
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pkgs-ui.nathanv.app`)
      kind: Rule
      services:
        - name: git-pkgs-service
          port: 8080
      middlewares:
        - name: authentik-forward-auth
          namespace: authentik
  tls:
    certResolver: le
    domains:
      - sans:
          - "*.nathanv.app"
