cluster/git-pkgs/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: git-pkgs-route
  namespace: git-pkgs
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pkgs.nathanv.app`)
      kind: Rule
      services:
        - name: git-pkgs-service
          port: 8080
      middlewares:
        - name: authentik-forward-auth
          namespace: authentik
    - match: Host(`pkgs.nathanv.app`) && PathRegexp(`(?i)^.*\.(whl|tgz|zip)$`)
      kind: Rule
      priority: 1000
      services:
        - name: git-pkgs-service
          port: 8080
      middlewares:
        - name: cdn-cache
          namespace: traefik
    - match: Host(`pkgs.nathanv.app`) && (PathPrefix(`/pypi`) || PathPrefix(`/npm`) || PathPrefix(`/helm`) || PathPrefix(`/debian`) || PathPrefix(`/rpm`) || PathPrefix(`/cargo`) || PathPrefix(`/generic`))
      kind: Rule
      services:
        - name: git-pkgs-service
          port: 8080
  tls:
    certResolver: le
    domains:
      - sans:
          - "*.nathanv.app"
